# game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Serene_external_libraries.txt
data/: level1.json  level10.json  level11-origin(harder).json  level11.json  level12 - harder.json  level12 - phase1.json  level12.json  level2.json  level3.json  level4.json  level5.json  level6.json  level7.json  level8.json  level9 - phase1.json  level9.json  snippet.json  test.json
data/archive/: level-horizontal.json  level1.json  level2.json
include/: CollisionCenter.h  Component.h  Constants.h  Entity.h  EntityFactory.h  Event.h  EventManager.h  Game.h  Level.h  LevelReader.h  LogicCenter.h  PlayerView.h  ResourceManager.h  StateManager.h  States.h  System.h  View.h  ViewManager.h
include/Components/: Appendage.h  CircleShape.h  DynamicBody.h  FiniteResource.h  Follower.h  Gravity.h  Hidden.h  Line.h  LinearForce.h  Location.h  ParticleSpawner.h  PlayerInput.h  RadialForce.h  RectangleShape.h  RigidBody.h  SensorShape.h  Sprite.h  StaticSegment.h  Timer.h  Velocity.h
include/Events/: ExitReached.h  FuelExpired.h  FuelLow.h  HitLethalWall.h  HitWall.h  OxygenExpired.h  OxygenLow.h  ReachedExit.h  TimeExpired.h  ViewChanged.h
include/States/: MainMenu.h  PauseMenu.h  Playing.h
include/Systems/: ControlCenter.h  DialogSystem.h  DialogueSystem.h  ParticleSystem.h  PhysicsParticleSystem.h  PhysicsSystem.h  PlayerControlSystem.h  SoundManager.h  SoundSystem.h  SpriteRenderSystem.h
include/Views/: ButtonList.h  FailMenuView.h  FinishMenuView.h  LevelMenuView.h  LevelView.h  MainMenuView.h  MenuButton.h  PauseMenuView.h  PlayerView.h  StateManager.h  WinMenuView.h
lib/json/: json.hpp
src/: CollisionCenter.cpp  Component.cpp  Entity.cpp  EntityFactory.cpp  Event.cpp  Game.cpp  Level.cpp  LevelReader.cpp  LogicCenter.cpp  PlayerView.cpp  ResourceManager.cpp  StateManager.cpp  System.cpp  View.cpp  ViewManager.cpp
src/Components/: Appendage.cpp  CircleShape.cpp  DynamicBody.cpp  FiniteResource.cpp  Hidden.cpp  Line.cpp  LinearForce.cpp  Location.cpp  RadialForce.cpp  RectangleShape.cpp  SensorShape.cpp  Sprite.cpp  StaticSegment.cpp  Timer.cpp  Velocity.cpp
src/Events/: ExitReached.cpp  FuelExpired.cpp  HitWall.cpp  OxygenExpired.cpp  ReachedExit.cpp  TimeExpired.cpp
src/States/: MainMenu.cpp  Playing.cpp
src/Systems/: ControlCenter.cpp  DialogSystem.cpp  DialogueSystem.cpp  ParticleSystem.cpp  PhysicsParticleSystem.cpp  PhysicsSystem.cpp  PlayerControlSystem.cpp  SoundManager.cpp  SoundSystem.cpp  SpriteRenderSystem.cpp
src/Views/: ButtonList.cpp  FailMenuView.cpp  FinishMenuView.cpp  LevelMenuView.cpp  LevelView.cpp  MainMenuView.cpp  MenuButton.cpp  PauseMenuView.cpp  PlayerView.cpp  StateManager.cpp  WinMenuView.cpp
